# dotfiles

./: .bash_profile  .condarc  .editorconfig  .gitignore  .motto  .pypirc  .shinc.toml  .zprofile  .zshrc  Argcfile.sh  Brewfile  Gemfile  LICENSE  Makefile  README.md  dotf  init.sh  install  install.sh  layout  link.sh  pyproject.toml  setup.sh  taplo.toml  vars.sh  yamlfmt.yaml
.cargo/: config
.github/instructions/: documentation.instructions.md  git.instructions.md
.oh-my-zsh/custom/: blazer.zsh  blazer.zsh.bak  dragon.zsh  dragon.zsh.bak  init.zsh
.ssh/: README.md  config  config.win
Python/: requirements.txt
ai/agents/: AGENTS.md  dot.yaml
ai/claude/: CLAUDE.md  dot.yaml  settings.json
ai/codex/: .env.example  AGENTS.md  config.toml  dot.yaml
ai/gemini/: .gitignore  dot.yaml  settings.json
apps/7-Zip/: dot.yaml
apps/AutoDarkMode/: dot.yaml
apps/CPU-Z/: dot.yaml
apps/ChatGPT/: dot.yaml
apps/CherryStudio/: dot.yaml
apps/ClashVergeRev/: dot.yaml
apps/ContextMenuManager/: dot.yaml
apps/CrystalDiskInfo/: dot.yaml
apps/CrystalDiskmark/: dot.yaml
apps/CurseForge/: dot.yaml
apps/Discord/: dot.yaml
apps/DiscordProxyStart/: Config.ini  dot.yaml
apps/DiskGenius/: dot.yaml
apps/Enpass/: dot.yaml
bash/: .bash_profile  .bashrc
cobra/: .cobra.yaml
editorconfig/: .editorconfig
git/: .gitconfig  README.md
iTerm2/: Profiles.json  iTerm2-Profiles.json
makefiles/: git.mk
os/: .gitignore  .stow-local-ignore
src/: bashly.yml  main.sh
ssh/: .stow-local-ignore
stow/: .stow-global-ignore
wget/: .wgetrc
zsh/: .zprofile  .zshrc
(+275 files in other folders)
