[project]
name = "dotfiles"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "pika>=1.3.2",
    "pyperclip>=1.9.0",
    "six>=1.17.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
]

[tool.isort]
force_grid_wrap = 2
profile = "black"
